colocando imagens fundo

--- a/exercicios/ex022/imagens/fundo001.html
+++ b/exercicios/ex022/imagens/fundo001.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste de imagens </title>
     <style>
+        body{
+            background-image: url(wallpaper002.jpg);
+        }
        div.quadrado{
         background-color: rgba(83, 73, 73, 0.808);
         border-radius: 10px;
@@ -20,7 +23,7 @@
        background-image: linear-gradient(to right,orange, red);
        }
        div#q3{
-        background-image: url('imagens');
+       background-image: url("pattern003.png");
        }
     </style>
 </head>
