--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -6,8 +6,9 @@
     <title>fundo 002</title>
     <style>
         body{
-            background-image: url('wallpapper001.jpg');
-        }
+            background-image: url('imagens/pattern001.png');
+            background-size: 100px 100px;   
+            background-repeat: repeat;     }
     </style>
 </head>
 <body>
