--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -14,8 +14,18 @@
         padding: 10px;
     }
 
-    div#q1{
+    div#q1{ background-position: left top;
 
+    }
+    div#q2{
+        background-position: left center;
+    }
+    div#q3{
+        background-position: right bottom;
+    }
+    div#q4{
+       background-image: center center
+       ;
     }
 </style>
 </head>
