--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fundo004</title>
+    <title>posicionamento</title>
 </head>
 <style>
     body{
-
+        height: 98vh;
+        border: dashed black;
+        background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position:right bottom;
     }
 </style>
 <body>
