--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -6,19 +6,34 @@
     <title>Alinhamento vertical</title>
     <style>
         #conteiner{
+            height: 96vh;
+            background-image: url(imagens/target001.png);
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            position: relative;
             height: 500px;
           background-color: purple;
+          padding: 10px;
 
         }
         #conteudo{
+            background-image: url(imagens/target001.png);
+            position: absolute;
             height: 200px;
+            width: 400px
+            ;
+            background-size: 100% 100%;
             background-color: yellow;
 
+            left: 50%;
+            top: 50%;
+
+            transform: translate(-50% ,-50%);
         }
     </style>
 </head>
 <body>
-    <sectio id="conteiner">
+    <section id="conteiner">
         <article id="conteudo">
 
         </article>
