--- a/exercicios/ex023/tabelas001.html
+++ b/exercicios/ex023/tabelas001.html
@@ -12,6 +12,7 @@
         table{
             border: 5px solid red;
             width: 400px;
+            height: 400px;
            border-collapse: collapse;
         }
         .classe{
@@ -19,7 +20,9 @@
         }
         td{
         border: 1px solid black;
-       padding-left: 49px;
+        padding-left: 8px;
+        text-align: center;/* alinhamento horizontal*/
+        vertical-align: middle;
         }
         tr.linha{
             background-color: rgba(127, 255, 212, 0.438);
@@ -39,7 +42,7 @@
                 <td>B1</td>
                 <td>C1</td>
             </tr>
-            <tr class="linha">
+            <tr>
                 <td>A2</td>
                 <td>B2</td>
                 <td>C2</td>
