--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     body{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
+    background-image: url( '');}
     table{
         width: 500px;
        border-collapse:collapse ;
@@ -44,6 +44,7 @@
     }
 </style>
 <body>
+    
     <!--ANATOMYA PARA TABELAS GRANDES
     TABLE 
         THEAD
