--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
+    <style>
+        iframe{
+            width: 500px;
+            height: 500px;
+            padding: 2px;
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>isso é um teste</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod, neque fuga ab molestiae repellendus at nulla adipisci recusandae dolorem aliquid fugiat repellat quis voluptatibus, obcaecati eveniet nihil provident maiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae neque consectetur veritatis nam quam fugit amet non eaque pariatur perspiciatis officiis saepe eius, ducimus repellendus! Nesciunt assumenda minima inventore et!</p>
 
-    <iframe src="" frameborder="0"></iframe>
+    <iframe src="file:///C:/Users/cliente/Desktop/Curso/html-css/exercicios/ex024/pag002.html" frameborder="0"></iframe >
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia praesentium, fugiat itaque amet alias natus velit architecto, saepe voluptate ex aut, ducimus incidunt tempora mollitia nostrum. Porro fugiat deleniti consequatur! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique doloribus labore aliquid eum, odio debitis tenetur ipsum quia, modi corporis temporibus, sint non quo explicabo a impedit et dolores esse!
