codigo dentro do iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
         <li><a href="#">terceira pagina</a></li>
     </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis quae cumque maiores porro officia quia repellat optio laboriosam id, delectus, quaerat minus aperiam sit modi iure cupiditate, unde corrupti quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, necessitatibus perspiciatis ad, accusamus esse debitis rerum enim magnam deleniti voluptatum corrupti voluptatibus, in culpa consequatur ipsa exercitationem facilis quo. Esse?</p>
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1><center>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo obcaecati, consequuntur, porro nulla quas quae, facilis tempore animi pariatur deleniti unde? Perspiciatis aspernatur iusto, doloribus minus cum illum ipsam ipsum.</p><img src='#'>" >
         <p>infelizmente seu navegador não é compativel com isso</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus sapiente eligendi perferendis ducimus quaerat ratione illo facere. Temporibus atque, culpa consequatur nostrum, soluta sapiente sit excepturi, quisquam eum aperiam doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, nobis sed consequuntur quo debitis sit minus, quisquam, dolorem explicabo unde quae. Beatae, illo debitis perferendis similique earum delectus sequi perspiciatis?</p>
