--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>Meu Primeiro Formulário</h1>
-<form  action="cadastro.php" autocomplete="off" >
+<form  action="cadastro.php" method="post" autocomplete="off" >
     <p ><label  for="inome">nome: </label>
         <input type="text" name="Nome" id="inome"></p>
     <p ><label for="isobrenome">sobrenome</label> 
