--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -19,6 +19,8 @@
             <label for="idata">Data</label>
             <input type="date" name="data" id="idata">
         </p>
+        <label for="ihora">Hora da Prova</label>
+        <input type="time" name="hora" id="ihora">
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
