adicionando novos botões

--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -10,8 +10,12 @@
     <form action="cadastro.php" method="get" autocomplete="on"></form>
     <p>
         <label for="ico">
-            <input type="color" name="cor" id="icor">
+            <input type="color" name="cor" id="icor" value="#00ff00">Cor:
         </label>
+    </p>
+    <p>
+        <label for="inivel">Satisfação</label>
+        <input type="range" name="nivel" id="inivel" >
     </p>
 
     <p><input type="submit" value="Enviar">
