criando modelo mobail

--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
+    <main>
+    <h1>testando media Queries</h1>
     
+        <img id="phone" src="imagens/icon-phone.png" alt="acessando via smarthfone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="acessando via tablet">
+        <img id="impressora" src="imagens/icon-print.png" alt="versão impressora">
+        <img id="computador" src="imagens/icon-pc.png" alt="versão pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="versão tv">
+    </main>
 </body>
 </html>
