--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,8 +6,9 @@
     <title>media query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1> Site </h1>
         <span id="burger" class="material-symbols-outlined" onclick="clickMenu()" > 
@@ -95,6 +96,15 @@
             Publicado por: Igor
     </footer>
    <script>
+    function mudouTamanho() {
+       if (window.innerwidth >= 768) {
+        itens.style.display = 'block'
+       }
+       else{
+        itens.style.display = 'none'
+       }
+    }
+
     function clickMenu() {
         if(itens.style.display == 'block') {  
         itens.style.display = 'none'
@@ -102,6 +112,8 @@
         itens.style.display ='block'
     }
      }
+
+
    </script>
 </body>
 </html>
